5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1749_1535.log
== TEST (2019-05-15 18:34:59) 
-- CODE:
from math import *
arctg(x)=x-(x**x**x)/3+(x**x**x**x**x)/5-(x**x**x**x**x**x**x)7+(x**x**x**x**x**x**x**x**x)/9
x=float(input('numero real:'))
k=int(input('numero de termos:'))

x=0

while (x<0):
	acrtg(x)= x- x**x**x/3+x**x**x**x**x
-- ERROR:
File "XXXX", line 2
    arctg(x)=x-(x**x**x)/3+(x**x**x**x**x)/5-(x**x**x**x**x**x**x)7+(x**x**x**x**x**x**x**x**x)/9
                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:35:40) 
-- CODE:
from math import *
f= -1<=x<=1
x=float(input('numero real:'))
k=int(input('numero de termos:'))

x=0

while (x<0):
	acrtg(x)= x- x**x**x/3+x**x**x**x**x
-- ERROR:
File "XXXX", line 9
    acrtg(x)= x- x**x**x/3+x**x**x**x**x
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:35:50) 
-- CODE:
from math import *
f= -1<=x<=1
x=float(input('numero real:'))
k=int(input('numero de termos:'))

x=0


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    f= -1<=x<=1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:00) 
-- CODE:
from math import *
f= -1<=x<=1
x=float(input('numero real:'))
k=int(input('numero de termos:'))

x=0
while (k>0)
print(round(x, 6)
-- ERROR:
File "XXXX", line 7
    while (k>0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
